--- a/src/staff_webapp/src/app/pages/dashboard-page/dashboard-page.component.html
+++ b/src/staff_webapp/src/app/pages/dashboard-page/dashboard-page.component.html
@@ -1,13 +1,17 @@
-<h3 class="text-xl">Concierge Admin Dashboard</h3>
-<div class="flex">
-	<div class="w-96">
-		<ul>
-			<li><a routerLink="/dashboard/home" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a></li>
-			<li><a routerLink="/dashboard/amenities" routerLinkActive="active" ariaCurrentWhenActive="page">Amenities</a></li>
-			<li><a routerLink="/login">Log out</a></li>
-		</ul>
+<!-- Top Bar -->
+<div class="flex justify-between items-center h-16 bg-slate-200 py-2 px-5">
+	<div>
+		<h3 class="text-xl font-bold">Concierge Admin Dashboard</h3>
 	</div>
-	<div class="flex-grow">
-		<router-outlet></router-outlet>
+	<div>
+		<a routerLink="/login" class="bg-slate-300 p-2 rounded-lg">Log out</a>
 	</div>
+</div>
+<div class="flex h-[calc(100vh-4rem)]">
+	<!-- Sidebar -->
+  <app-sidebar class="bg-slate-200 h-full w-80 flex-none"/>
+	<!-- Tabs -->
+  <div class="flex-grow overflow-auto mx-10 my-5">
+    <router-outlet />
+  </div>
 </div>
