--- a/src/staff_webapp/src/app/components/sidebar/sidebar.component.html
+++ b/src/staff_webapp/src/app/components/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
   @for (item of items; track $index) {
     <div class="flex items-center w-full cursor-pointer rounded-lg hover:bg-slate-300 h-12" [routerLink]="item.routerLink"
       routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-      <span class="ml-5">{{ item.label }}</span>
+      <span class="ml-5 sidebar-item">{{ item.label }}</span>
     </div>
   }
 </div>
