--- a/src/staff_webapp/src/app/pages/login-page/login-page.component.html
+++ b/src/staff_webapp/src/app/pages/login-page/login-page.component.html
@@ -3,11 +3,11 @@
 	<form [formGroup]="loginForm" (ngSubmit)="handleLogin()" class='border p-5 rounded-xl'>
 		<div class='mb-3'>
 			<label htmlFor="room-num-input" class='block'>Username</label>
-			<input id='room-num-input' type="text" placeholder='username' class='px-3 py-2 w-full rounded-lg border border-neutral-200'/>
+			<input id='room-num-input' type="text" formControlName="username" placeholder='username' class='px-3 py-2 w-full rounded-lg border border-neutral-200'/>
 		</div>
 		<div class='mb-3'>
 			<label htmlFor="pass-code-input" class='block'>Password</label>
-			<input id='pass-code-input' type="password" placeholder='password' class='px-3 py-2 w-full rounded-lg border border-neutral-200'/>
+			<input id='pass-code-input' type="password" formControlName="password" placeholder='password' class='px-3 py-2 w-full rounded-lg border border-neutral-200'/>
 		</div>
 		<div class='grid place-content-center'>
 			<button type='submit' [disabled]="loginForm.invalid" class='px-3 py-2 bg-neutral-200 rounded-lg'>Sign In</button>
