--- a/src/staff_webapp/src/app/pages/dashboard-page/dashboard-page.component.html
+++ b/src/staff_webapp/src/app/pages/dashboard-page/dashboard-page.component.html
@@ -4,7 +4,7 @@
 		<h3 class="text-xl font-bold">Concierge Admin Dashboard</h3>
 	</div>
 	<div>
-		<a routerLink="/login" class="bg-slate-300 p-2 rounded-lg">Log out</a>
+		<a href="#" id="logout" (click)="handleLogout()" class="bg-slate-300 p-2 rounded-lg">Log out</a>
 	</div>
 </div>
 <div class="flex h-[calc(100vh-4rem)]">
