fixed columns, wip on modal

--- a/src/staff_webapp/src/app/pages/tasks-tab/tasks-tab.component.html
+++ b/src/staff_webapp/src/app/pages/tasks-tab/tasks-tab.component.html
@@ -4,23 +4,25 @@
 <table class="w-full text-left table-auto border-collapse">
   <thead class="bg-gray-50">
     <tr>
-      <th class="border-b p-2">Task Title</th>
-      <th class="border-b p-2">Room Number</th>
-      <th class="border-b p-2">Priority</th>
+      <th class="border-b p-2">Room No</th>
+      <th class="border-b p-2">Type of Service</th>
+      <th class="border-b p-2">Description</th>
+      <th class="border-b p-2">Time Created</th>
+      <th class="border-b p-2">Assignee</th>
       <th class="border-b p-2">Status</th>
-      <th class="border-b p-2">Actions</th>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let task of tasks">
-      <td class="border-b p-2">{{ task.title }}</td>
-      <td class="border-b p-2">{{ task.roomNumber }}</td>
-      <td class="border-b p-2">{{ task.priority }}</td>
-      <td class="border-b p-2">{{ task.status }}</td>
-      <td class="border-b p-2">
-        <button (click)="editTask(task)" class="text-blue-500 mr-2">Edit</button>
-        <button (click)="claimUnclaimTask(task)" class="text-green-500">{{ task.assignee ? 'Unclaim' : 'Claim' }}</button>
-      </td>
+    <tr *ngFor="let task of tasks" (click)="openModal(task)">
+      <td class="border-b p-2">{{ task.roomNumber }}</td>  
+      <td class="border-b p-2">{{ task.typeOfService }}</td>  
+      <td class="border-b p-2">{{ task.description }}</td>  
+      <td class="border-b p-2">{{ task.timeCreated | date:'short' }}</td>  
+      <td class="border-b p-2">{{ task.assignee || 'Unassigned' }}</td>  
+      <td class="border-b p-2">{{ task.status }}</td>  
     </tr>
   </tbody>
 </table>
+
+<!-- Modal Component -->
+<app-task-modal [isOpen]="isModalOpen" (close)="closeModal()" [task]="selectedTask"></app-task-modal>
