updated incident report cards

--- a/src/staff_webapp/src/app/components/incident-report-form/incident-report-form.component.html
+++ b/src/staff_webapp/src/app/components/incident-report-form/incident-report-form.component.html
@@ -30,7 +30,7 @@
 		<label for="status" class="font-semibold">Status</label>
 		<select id="status" formControlName="status" class="p-2 border rounded-lg w-full h-10">
 			<option value="OPEN">OPEN</option>
-			<option value="IN_PROGRESS">IN_PROGRESS</option>
+			<option value="IN_PROGRESS">IN PROGRESS</option>
 			<option value="RESOLVED">RESOLVED</option>
 			<option value="CLOSED">CLOSED</option>
 		</select>
