updated incident report card with updated tests

--- a/src/staff_webapp/src/app/pages/incident-reports-tab/incident-reports-tab.component.html
+++ b/src/staff_webapp/src/app/pages/incident-reports-tab/incident-reports-tab.component.html
@@ -16,7 +16,7 @@
 						<div class="flex justify-between mb-1">
 							<p class="text-xl font-semibold truncate">{{report.title}}</p>
 						</div>
-						<p class="line-clamp-3 break-words"> <!-- Added break-words for wrapping -->
+						<p class="line-clamp-3 break-words">
 							{{ report.description }}
 						</p>
 						<div class="flex items-center justify-between mt-auto">
