--- a/src/staff_webapp/src/styles.css
+++ b/src/staff_webapp/src/styles.css
@@ -1,3 +1,7 @@
+/* @import '~@angular/material/prebuilt-themes/indigo-pink.css'; */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
