--- a/src/staff_webapp/src/app/components/task-modal/confirm-deletion-modal.component.html
+++ b/src/staff_webapp/src/app/components/task-modal/confirm-deletion-modal.component.html
@@ -1,13 +1,24 @@
-<div class="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center z-50">
-    <div class="bg-white rounded-lg p-8 w-full max-w-sm">
-      <h2 class="text-xl font-bold mb-4">Confirm Deletion</h2>
-      <p class="mb-4">Are you sure you want to delete this task?</p>
-  
-      <!-- Confirm and Cancel Buttons -->
-      <div class="flex justify-end space-x-4">
-        <button (click)="cancelDelete()" class="bg-gray-300 text-black px-4 py-2 rounded-lg">Cancel</button>
-        <button (click)="confirmDelete()" class="bg-red-500 text-white px-4 py-2 rounded-lg">Confirm</button>
-      </div>
+<div
+  class="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center z-50"
+>
+  <div class="bg-white rounded-lg p-8 w-full max-w-sm">
+    <h2 class="text-xl font-bold mb-4">Confirm Deletion</h2>
+    <p class="mb-4">Are you sure you want to delete this task?</p>
+
+    <!-- Confirm and Cancel Buttons -->
+    <div class="flex justify-end space-x-4">
+      <button
+        (click)="cancelDelete()"
+        class="bg-gray-300 text-black px-4 py-2 rounded-lg"
+      >
+        Cancel
+      </button>
+      <button
+        (click)="confirmDelete()"
+        class="bg-red-500 text-white px-4 py-2 rounded-lg"
+      >
+        Confirm
+      </button>
     </div>
   </div>
-  
+</div>
