fetched tasks from backend, add tasks to backend, edit tasks (wip)

--- a/src/staff_webapp/src/app/components/task-modal/task-modal.component.html
+++ b/src/staff_webapp/src/app/components/task-modal/task-modal.component.html
@@ -67,7 +67,7 @@
       </div>
 
       <p class="mb-1">
-        <strong>Time Created:</strong> {{ task.timeCreated | date : "short" }}
+        <strong>Time Created:</strong> {{ task.createdAt | date : "short" }}
       </p>
       <p class="mb-1">
         <strong>Assignee:</strong> {{ task.assignee || "Unassigned" }}
