updated delete from server

--- a/src/staff_webapp/src/app/pages/tasks-tab/tasks-tab.component.html
+++ b/src/staff_webapp/src/app/pages/tasks-tab/tasks-tab.component.html
@@ -107,4 +107,5 @@
   [isOpen]="isModalOpen"
   (close)="closeModal()"
   [task]="selectedTask"
+  (taskDeleted)="removeTask($event)"
 ></app-task-modal>
