fixed edit tasks

--- a/src/staff_webapp/src/app/pages/tasks-tab/tasks-tab.component.html
+++ b/src/staff_webapp/src/app/pages/tasks-tab/tasks-tab.component.html
@@ -108,4 +108,5 @@
   (close)="closeModal()"
   [task]="selectedTask"
   (taskDeleted)="removeTask($event)"
+  (taskUpdated)="updateTaskList($event)"
 ></app-task-modal>
