--- a/src/staff_webapp/src/app/pages/incident-reports-tab/incident-reports-tab.component.html
+++ b/src/staff_webapp/src/app/pages/incident-reports-tab/incident-reports-tab.component.html
@@ -22,7 +22,7 @@
 						<div class="flex items-center justify-between mt-auto">
 							<p class="text-xs mt-4 font-semibold">{{report.severity}}</p>
 							<div>
-								<button type="button" (click)="report.id && loadAmenity(report)" style="width: 60px; height: 30px;" class="bg-slate-300 p-1 rounded-md ">Edit</button>
+								<button type="button" (click)="report.id && loadAmenity(report)" style="width: 60px; height: 30px;" class="bg-slate-300 p-1 mr-2 rounded-md ">Edit</button>
 								<button type="button" (click)="report.id && deleteReport(report.id)" style="width: 60px; height: 30px;" class="bg-red-700 text-white p-1 rounded-md">Delete</button>
 							</div>
 						</div>
@@ -43,13 +43,13 @@
 						<div class="flex justify-between mb-1">
 							<p class="text-xl font-semibold truncate">{{report.title}}</p>
 						</div>
-						<p class="line-clamp-3 break-words"> <!-- Added break-words for wrapping -->
+						<p class="line-clamp-3 break-words">
 							{{ report.description }}
 						</p>
 						<div class="flex items-center justify-between mt-auto">
 							<p class="text-xs mt-4 font-semibold">{{report.severity}}</p>
 							<div>
-								<button type="button" (click)="report.id && loadAmenity(report)" style="width: 60px; height: 30px;" class="bg-slate-300 p-1 rounded-md ">Edit</button>
+								<button type="button" (click)="report.id && loadAmenity(report)" style="width: 60px; height: 30px;" class="bg-slate-300 p-1 mr-2 rounded-md ">Edit</button>
 								<button type="button" (click)="report.id && deleteReport(report.id)" style="width: 60px; height: 30px;" class="bg-red-700 text-white p-1 rounded-md">Delete</button>
 							</div>
 						</div>
@@ -70,13 +70,13 @@
 						<div class="flex justify-between mb-1">
 							<p class="text-xl font-semibold truncate">{{report.title}}</p>
 						</div>
-						<p class="line-clamp-3 break-words"> <!-- Added break-words for wrapping -->
+						<p class="line-clamp-3 break-words">
 							{{ report.description }}
 						</p>
 						<div class="flex items-center justify-between mt-auto">
 							<p class="text-xs mt-4 font-semibold">{{report.severity}}</p>
 							<div>
-								<button type="button" (click)="report.id && loadAmenity(report)" style="width: 60px; height: 30px;" class="bg-slate-300 p-1 rounded-md ">Edit</button>
+								<button type="button" (click)="report.id && loadAmenity(report)" style="width: 60px; height: 30px;" class="bg-slate-300 p-1 mr-2 rounded-md ">Edit</button>
 								<button type="button" (click)="report.id && deleteReport(report.id)" style="width: 60px; height: 30px;" class="bg-red-700 text-white p-1 rounded-md">Delete</button>
 							</div>
 						</div>
@@ -97,13 +97,13 @@
 						<div class="flex justify-between mb-1">
 							<p class="text-xl font-semibold truncate">{{report.title}}</p>
 						</div>
-						<p class="line-clamp-3 break-words"> <!-- Added break-words for wrapping -->
+						<p class="line-clamp-3 break-words">
 							{{ report.description }}
 						</p>
 						<div class="flex items-center justify-between mt-auto">
 							<p class="text-xs mt-4 font-semibold">{{report.severity}}</p>
 							<div>
-								<button type="button" (click)="report.id && loadAmenity(report)" style="width: 60px; height: 30px;" class="bg-slate-300 p-1 rounded-md ">Edit</button>
+								<button type="button" (click)="report.id && loadAmenity(report)" style="width: 60px; height: 30px;" class="bg-slate-300 p-1 mr-2 rounded-md ">Edit</button>
 								<button type="button" (click)="report.id && deleteReport(report.id)" style="width: 60px; height: 30px;" class="bg-red-700 text-white p-1 rounded-md">Delete</button>
 							</div>
 						</div>
