--- a/src/staff_webapp/src/app/pages/amenities-tab/amenities-tab.component.html
+++ b/src/staff_webapp/src/app/pages/amenities-tab/amenities-tab.component.html
@@ -24,7 +24,7 @@
               {{amenity.description}}
             </td>
             <td class="px-6 py-6">
-              {{amenity.startTime}} - {{amenity.endTime}}
+              {{ formatTimeToAMPM(amenity.startTime) }} - {{ formatTimeToAMPM(amenity.endTime) }}
             </td>
             <td class="px-6 py-6 flex gap-3 items-center justify-end">
               <button type="button" (click)="amenity.id && loadAmenity(amenity)" class="bg-slate-200 p-3 rounded-lg">Edit</button>
